--- a/style.css
+++ b/style.css
@@ -6,8 +6,13 @@
     box-sizing: border-box;
     font-family: 'roboto';
 }
+body{
+  background-color: rgba(0, 0, 0, 0.623);
+  backdrop-filter: blur(15px);
+}
 #contenedor{
-    background-color: #3C3541;
+    background-image: url(./images/bg2.jpg);
+    background-size: cover;
     width: 100%;
     height: 100vh;
     display: none;
@@ -22,10 +27,13 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #e3a2eea9;
+    background-color: rgba(255, 255, 255, 0.123);
     /* box-shadow: rgba(0, 0, 0, 0.171) 1.95px 1.95px 2.6px; */
     box-shadow: rgba(0, 0, 0, 0.5) 0px 18px 50px -10px;
+    backdrop-filter: blur(20px);
     border-radius: 20px;
+    overflow-x: hidden;
+    color: rgba(255, 255, 255, 0.589);
 }
 
 
@@ -61,7 +69,7 @@
     content: '';
   }
   .loader:after {
-    background: gray;
+    background: rgba(0, 0, 0, 0);
     width: 75%;
     height: 75%;
     border-radius: 50%;
@@ -94,10 +102,11 @@
     }
   }
 
-  @media(max-width: 412px){
+  @media(max-width: 414px){
       #contenedor{
           flex-direction: column;
           width: 100%;
+          height: auto;
       }
       .caja1, .caja2, .caja3{
         height: 350px;
