--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 #contenedor{
     background-image: url(./images/bg2.jpg);
     background-size: cover;
+    /* background-position: center bottom; */
     width: 100%;
     height: 100vh;
     display: none;
@@ -30,7 +31,7 @@ body{
     background-color: rgba(255, 255, 255, 0.123);
     /* box-shadow: rgba(0, 0, 0, 0.171) 1.95px 1.95px 2.6px; */
     box-shadow: rgba(0, 0, 0, 0.5) 0px 18px 50px -10px;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
     border-radius: 20px;
     overflow-x: hidden;
     color: rgba(255, 255, 255, 0.589);
@@ -107,9 +108,12 @@ body{
           flex-direction: column;
           width: 100%;
           height: auto;
+          background-size: cover;
+          background-position: center;
       }
       .caja1, .caja2, .caja3{
         height: 350px;
         width: 230px;
+         backdrop-filter: blur(10px);
     }
   }
