--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     font-family: 'roboto';
 }
 body{
-  background-color: rgba(0, 0, 0, 0.623);
+  background-color: #111;
   backdrop-filter: blur(15px);
 }
 #contenedor{
@@ -37,71 +37,51 @@ body{
     color: rgba(255, 255, 255, 0.589);
 }
 
-
-.loader {
-    font-size: 10px;
-    margin: 50px auto;
-    text-indent: -9999em;
-    width: 11em;
-    height: 11em;
-    border-radius: 50%;
-    background: #000000;
-    background: -moz-linear-gradient(left, #000000 10%, rgba(255, 255, 255, 0) 42%);
-    background: -webkit-linear-gradient(left, #000000 10%, rgba(255, 255, 255, 0) 42%);
-    background: -o-linear-gradient(left, #000000 10%, rgba(255, 255, 255, 0) 42%);
-    background: -ms-linear-gradient(left, #000000 10%, rgba(255, 255, 255, 0) 42%);
-    background: linear-gradient(to right, #000000 10%, rgba(255, 255, 255, 0) 42%);
+  .loader{
     position: relative;
-    -webkit-animation: load3 1.4s infinite linear;
-    animation: load3 1.4s infinite linear;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    margin-top: 50vh;
-  }
-  .loader:before {
-    width: 50%;
-    height: 50%;
-    background: #000000;
-    border-radius: 100% 0 0 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: '';
-  }
-  .loader:after {
-    background: rgba(0, 0, 0, 0);
-    width: 75%;
-    height: 75%;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
-    content: '';
+    background: linear-gradient(45deg, transparent, transparent 40%, #0e8178);
+    animation: animate 2s linear infinite;
     margin: auto;
+    margin-top: 43vh;
+}
+
+@keyframes animate {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.loader::before{
+    content: "";
     position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  }
-  @-webkit-keyframes load3 {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  @keyframes load3 {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
+    top: 6px;
+    left: 6px;
+    right: 6px;
+    bottom: 6px;
+    background-color: #111;
+    border-radius: 50%;
+    z-index: 1000;
+}
+.loader::after{
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background: linear-gradient(45deg, transparent, transparent 40%, #0e8178);
+    border-radius: 50%;
+    z-index: 1;
+    filter: blur(30px);
+}
+
+
 
   @media(max-width: 537px){
       #contenedor{
